--- a/Movimentacao/movimentacao.html
+++ b/Movimentacao/movimentacao.html
@@ -3,19 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste de Colisão</title>
+    <title>Movimentacao</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-
 <body>
-    <h1>Teste de Colisão</h1>
-    <section>
-
-    
-    <br><canvas width="600px" height="400px"></canvas>
-
-</section>
+    <h1>Movimentação</h1>
+    <br><br><canvas width="600px" height="400px"></canvas>
 <footer> &copy; Treinando</footer>
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
