--- a/MapaNavegavel/mapa.html
+++ b/MapaNavegavel/mapa.html
@@ -5,11 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapa Navegável</title>
     <link rel="stylesheet" href="estilo.css">
+
 </head>
+
+
 <body>
-    <h1>Movimentação</h1>
+
+    <h1>Mapa</h1>
+
     <br><br><canvas width="600px" height="400px"></canvas>
+
 <footer> &copy; Treinando</footer>
+
+
 <script src="script.js"></script>
+
 </body>
+
+
+
 </html>
